[package]
name = "raytracer"
version = "0.1.0"
authors = ["Sampo Siitonen <sampo.siitonen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.4"
nalgebra = "0.21.0"

[profile.release]
debug = true